--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   build:
     commands:
       - sam build
-      - sam package --s3-bucket <YOUR_S3_BUCKET_NAME> --output-template-file packaged.yaml
+      - sam package --s3-bucket targetflowbucket --output-template-file packaged.yaml
 artifacts:
   type: zip
   files:
